+ Intermediate commit. No projects fleshed out, half working

--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,2 +1,9 @@
-<p> HTML , CSS , Javascript , PHP, Python, C</p>
-<p> Adobe XD, Inkscape, Git, Linux </p>
+<h6>Languages (Strong Proficiency)</h6>
+<p>C++, C#, HTML </p>
+
+<h6>Languages (Weaker Proficiency)</h6>
+<p>JS, Kotlin, Python, Lua</p>
+
+<h6>Frameworks and Tools</h6>
+<p>Unreal Engine, ImGui (including extensions), PlayStation 5, WPF, Unity, Avalonia, TeamCity, Git, Perforce</p>
+
