--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,28 +5,19 @@ layout: default
 <div class="row justify-content-center" id="blog-post-container">
   <div class="col-lg-10">
     {%- include blog_post_article.html -%}
-     {%- include blog_post_comments.html-%}
   </div>
 </div>
-<div class="row">
-  <div class="col-md-4">
+<div class="row" style="margin-left: auto; margin-right: auto;">
+  <div class="col-md-4" style="margin-left: auto;">
     <div class="card">
       <div class="card-header">About {{site.author}}</div>
       <div class="card-body">
         <p class="author_bio">{{ site.author_bio }}</p>
-        {%- include github_star_button.html -%}
+        {%- include github_follow_button.html -%} 
       </div>
     </div>
   </div>
-  <div class="col-md-4">
-    <div class="card">
-      <div class="card-header">Categories</div>
-      <div class="card-body text-dark">
-        {%- include blog_categories.html -%}
-      </div>
-    </div>
-  </div>
-  <div class="col-md-4">
+  <div class="col-md-4" style="margin-right: auto;">
     <div class="card">
       <div class="card-header">Useful Links</div>
       <div class="card-body text-dark">
