--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -141,7 +141,7 @@ layout: default
     </div>
     {% if site.show_author_project_details == true %}
     <div id="author_projects" class="card">
-      <h1 class="card-title">Recent Projects</h1>
+      <h1 class="card-title">Featured Projects</h1>
       <br />
       {% for project in site.posts %} {% if project.visibility
       == true and project.featured == true %} 
