--- a/_includes/blog_post_article.html
+++ b/_includes/blog_post_article.html
@@ -1,3 +1,10 @@
+<style>
+  .inline-center {
+    display: flex;
+    margin: auto;
+  }
+</style>
+
 <article class="card" itemscope itemtype="http://schema.org/BlogPosting">
   <div class="card-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
