--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,26 +1,49 @@
 <style>
 /* change cover_img in config.yml */
 .jumbotron {
-    background-color: var(--main-background-color) !important;
-    background-image: url('/assets/img/{{site.hero_cover_img}}');
+    position: relative;
     text-align: center;
+    overflow: hidden;
+    z-index: 0;
+    background-color: var(--main-background-color) !important;
+}
+
+.jumbotron::before {
+    content: "";
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background-image: url('/assets/img/{{site.hero_cover_img}}');
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
+    opacity: 0.6; /* 50% opacity for the background */
+    z-index: -2; /* Put behind content */
 }
+
+/* Dark overlay layer */
+.jumbotron::after {
+    content: "";
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background-color: rgba(0, 0, 0, 0.15); /* dark tint with 40% opacity */
+    z-index: -1;
+}
+
 .jumbotron-btns {
   display: block;
   margin-top: 50px;
+  opacity: 100%;
 }
 
 .jumbotron-heading, .lead {
   color: #fff;
+  opacity: 100%;
 }
 </style>
 
 <!-- home hero section -->
 <div class="jumbotron">
-  <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/{{site.author_logo}}" />
+  <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/{{site.author_logo}}" style="opacity: 100%;"/>
   <p class="jumbotron-heading">Hi, I'm {{site.author}}!</p>
 
   <p class="lead" id="typewriteText"></p>
