--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,10 +28,6 @@
   {% endif %} {% if page.url %}
   <meta content="{{ site.url }}{{ page.url }}" property="og:url" />
   {% endif %} {% if page.date %}
-  <meta
-    content="{{ page.date | date_to_xmlschema }}"
-    property="article:published_time"
-  />
   <meta content="{{ site.url }}/about/" property="article:author" />
   {% endif %} {% if page.thumbnail %}
   <meta content="{{ site.url }}{{ page.thumbnail }}" property="og:image" />
@@ -95,6 +91,7 @@
   />
   <!-- Favicon -->
   <link
+    id="favicon"
     rel="icon"
     href="{{site.url}}{{site.baseurl}}/assets/img/favicon-7.ico"
     type="image/gif"
@@ -112,6 +109,7 @@
   ></script>
   <!-- <script src="{{site.url}}{{site.baseurl}}/assets/bower_components/jquery/dist/jquery.min.js"></script> -->
   <script src="{{site.url}}{{site.baseurl}}/assets/js/mode-switcher.js"></script>
+  <script src="{{site.url}}{{site.baseurl}}/assets/js/favicon-updater.js"></script>
   <script src="{{site.url}}{{site.baseurl}}/assets/bower_components/jquery.easing/jquery.easing.min.js"></script>
   <script src="{{site.url}}{{site.baseurl}}/assets/bower_components/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="{{site.url}}{{site.baseurl}}/assets/bower_components/jquery-mousewheel/jquery.mousewheel.min.js"></script>
