+ Ignored unneeded post + Fixed some image issues that only happen in deployment

--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -8,7 +8,7 @@ layout: default
                   <div class="row">
                       {% for project in paginator.posts %}
                       <div class="card blog-post">
-                          <img class="card-img-top" src="{{site.url}}{{site.baseurl}}{{ project.thumbnail }}" alt="{{ project.title }}">
+                          <img class="card-img-top" src="{{site.url}}{{site.baseurl}}/{{ project.thumbnail }}" alt="{{ project.title }}">
                           <div class="card-body center">
                               <h4 class="card-title">{{ project.title }}</h4>
 
