--- a/_includes/blog_post_article.html
+++ b/_includes/blog_post_article.html
@@ -44,7 +44,7 @@
   <div class="card-body" itemprop="articleBody">
     <img
       class="card-img-top"
-      src="{{site.url}}{{site.baseurl}}{{ page.thumbnail }}"
+      src="{{site.url}}{{site.baseurl}}/{{ page.thumbnail }}"
       alt="{{ post.title }}"
     />
     <br />
