+ Fixed latest projects button

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -52,7 +52,7 @@
   </span>
   <!-- uncomment/modify buttons as you want-->
   <div class="jumbotron-btns">
-    <a href="{{site.url}}{{site.baseurl}}/{{site.posts[0].permalink}}">
+    <a href="{{site.url}}{{site.baseurl}}{{site.posts[0].permalink}}">
       <button class="btn btn-md btn-warning"> <strong>See my latest project!</strong> </button>
     </a>
   </div>
