+ Configured robots.txt to disallow AI scrapers, as well as fix the sitemap path

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,6 +34,7 @@
           <ul class="nav justify-content-end">
             <li class="nav-item"> 
               <input
+                aria-label="Light-mode/Dark-mode toggle"
                 class="nav-link switch theme-toggle"
                 type="checkbox"
                 name="checkbox"
