--- a/_includes/head.html
+++ b/_includes/head.html
@@ -86,6 +86,15 @@
     href="https://fonts.googleapis.com/css?family=Quicksand&display=swap"
     rel="stylesheet"
   />
+
+  <!-- Preload large background image -->
+  <link 
+    href="{{site.url}}{{site.baseurl}}/assets/img/{{site.hero_cover_img}}"
+    rel="preload"
+    fetchpriority="high"
+    as="image"
+  />
+
   <!-- Favicon -->
   <link
     id="favicon"
