--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -43,7 +43,7 @@
 
 <!-- home hero section -->
 <div class="jumbotron">
-  <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/{{site.author_logo}}" style="opacity: 100%;"/>
+  <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/{{site.author_logo}}" style="opacity: 100%;" alt="Profile image showing the author's face"/>
   <p class="jumbotron-heading">Hi, I'm {{site.author}}!</p>
 
   <p class="lead" id="typewriteText"></p>
