--- a/_includes/blog_post_article.html
+++ b/_includes/blog_post_article.html
@@ -46,6 +46,7 @@
       class="card-img-top"
       src="{{site.url}}{{site.baseurl}}/{{ page.thumbnail }}"
       alt="{{ post.title }}"
+      fetchpriority="high"
     />
     <br />
     <br />
